<resources>
    <string name="app_name">RickAndMortyAPI</string>
    <string name="shwifty">Швифтануться</string>
    <string name="name">Имя:</string>
    <string name="state">Состояние:</string>
    <string name="race">Раса:</string>
    <string name="first_seen">Впервые замечен:</string>
    <string name="get_random_character">Получить случайного персонажа</string>
    <string name="get_twenty_characters">Получить случайную страницу персонажей</string>
    <string name="filter_settings">Настроить фильтры</string>
    <string name="get_characters">Получить персонажей</string>
    <string name="name_character">Имя</string>
    <string name="species_character">Раса</string>
    <string name="status">Статус</string>
    <string name="alive">Жив</string>
    <string name="dead">Мертв</string>
    <string name="unknown">Неизвестно</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="gender">Пол</string>
    <string name="genderless">Гендернонейтральный</string>
    <string name="setup_filters">Применить фильтры</string>
    <string name="alien">Иноплонетянин</string>
    <string name="animal">Животное</string>
    <string name="human">Человек</string>
    <string name="humanoid">Человекоподобный</string>
    <string name="mythological_creature">Мифическое существо</string>
    <string name="robot">Робот</string>
    <string name="poopybutthole">Жопосранчик</string>
    <string name="not_selected">Не выбрано</string>

</resources>